resources/network-policy/apps.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: frontend
  name: frontend
spec:
  containers:
    - args:
        - /bin/sh
        - -c
        - sleep 3600
      image: busybox
      name: frontend
      resources: {}
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: backend
  name: backend
spec:
  containers:
    - args:
        - /bin/sh
        - -c
        - sleep 3600
      image: busybox
      name: busybox
      resources: {}
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: db
  name: db
spec:
  containers:
    - args:
        - /bin/sh
        - -c
        - sleep 3600
      image: busybox
      name: busybox
      resources: {}
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: auth
  name: auth
spec:
  containers:
    - args:
        - /bin/sh
        - -c
        - sleep 3600
      image: busybox
      name: busybox
      resources: {}
    - name: nginx
      image: nginx
      ports:
        - containerPort: 80
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}

---
